[gd_scene load_steps=21 format=3 uid="uid://dwxr1gnovk0jv"]

[ext_resource type="Theme" uid="uid://cmd714lbb53ja" path="res://assets/resources/themes/ui_theme.tres" id="1_6sqyy"]
[ext_resource type="Script" uid="uid://chj3en6dpytsf" path="res://assets/scenes/ui/saveloadmenu/saveButton.gd" id="2_hc6b0"]
[ext_resource type="AudioStream" uid="uid://bu2tsjdwp3sgi" path="res://assets/sounds/ui/menu/Menu hover_1.wav" id="3_ont7j"]
[ext_resource type="AudioStream" uid="uid://drstgovlvl11k" path="res://assets/sounds/ui/menu/Menu hover_2.wav" id="4_j0nlr"]
[ext_resource type="AudioStream" uid="uid://cr3ij4oofjpjd" path="res://assets/sounds/ui/menu/Menu_click_1.wav" id="4_qq3no"]
[ext_resource type="AudioStream" uid="uid://d3ivy7qafrxt8" path="res://assets/sounds/ui/menu/Menu_click_2.wav" id="5_qky3t"]
[ext_resource type="AudioStream" uid="uid://bqnfn8cqigm0f" path="res://assets/sounds/ui/menu/Menu hover_3.wav" id="5_tyc0u"]
[ext_resource type="AudioStream" uid="uid://cnowyc1nhuvfd" path="res://assets/sounds/ui/menu/Menu hover_4.wav" id="6_i4uj5"]
[ext_resource type="AudioStream" uid="uid://b61ylgh6ym6my" path="res://assets/sounds/ui/menu/Menu_click_3.wav" id="6_pbqbx"]
[ext_resource type="AudioStream" uid="uid://cg2gg2gqhitg4" path="res://assets/sounds/ui/menu/Menu_click_4.wav" id="7_ont7j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hgw5i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1sutc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uklys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dkqhi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqgmi"]

[sub_resource type="Gradient" id="Gradient_06uxp"]
colors = PackedColorArray(0.196078, 0, 0, 1, 0.356863, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pv6nl"]
gradient = SubResource("Gradient_06uxp")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_rrhwt"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_feh4n"]
streams_count = 4
stream_0/stream = ExtResource("3_ont7j")
stream_1/stream = ExtResource("4_j0nlr")
stream_2/stream = ExtResource("5_tyc0u")
stream_3/stream = ExtResource("6_i4uj5")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_j0nlr"]
streams_count = 4
stream_0/stream = ExtResource("4_qq3no")
stream_1/stream = ExtResource("5_qky3t")
stream_2/stream = ExtResource("6_pbqbx")
stream_3/stream = ExtResource("7_ont7j")

[node name="saveButton" type="Button"]
custom_minimum_size = Vector2(0, 190)
anchors_preset = -1
anchor_right = 0.662
anchor_bottom = 0.211
offset_right = 0.800049
offset_bottom = 0.0999908
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_6sqyy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hgw5i")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1sutc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uklys")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dkqhi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qqgmi")
script = ExtResource("2_hc6b0")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 614.0
offset_bottom = 152.0
texture = SubResource("GradientTexture1D_pv6nl")

[node name="saveIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 18.0
offset_right = 207.0
offset_bottom = 136.0
texture = SubResource("PlaceholderTexture2D_rrhwt")
expand_mode = 1

[node name="saveName" type="Label" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 6.0
offset_right = 1308.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 31
text = "SAVENAME"
vertical_alignment = 1

[node name="saveLocation" type="Label" parent="."]
self_modulate = Color(0.796243, 0.796243, 0.796243, 1)
layout_mode = 0
offset_left = 241.0
offset_top = 67.0
offset_right = 730.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 22
text = "Save Location
"
vertical_alignment = 1

[node name="saveTimestamp" type="Label" parent="."]
self_modulate = Color(0.796243, 0.796243, 0.796243, 1)
layout_mode = 0
offset_left = 241.0
offset_top = 36.0
offset_right = 730.0
offset_bottom = 97.0
theme_override_font_sizes/font_size = 22
text = "Save Time
"
vertical_alignment = 1

[node name="audioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_feh4n")
volume_db = -2.0
bus = &"UI"

[node name="selectSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_j0nlr")
volume_db = -10.0
bus = &"UI"

[connection signal="focus_entered" from="." to="." method="hoverOn"]
[connection signal="focus_exited" from="." to="." method="hoverOff"]
[connection signal="mouse_entered" from="." to="." method="hoverOn"]
[connection signal="mouse_exited" from="." to="." method="hoverOff"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
